fixed the spacing issues on the login page

--- a/frontend/sign-up/style.css
+++ b/frontend/sign-up/style.css
@@ -38,7 +38,7 @@ form{
     .section-1{
         display: block;
         padding-top: 40%;
-       width: 100%;
+       
         height: 100vh;
         
     }
